tested pageviews on sidebar.html

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -91,3 +91,13 @@
   </div> <!-- .sidebar-bottom -->
 
 </div><!-- #sidebar -->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V0WV65DGPD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V0WV65DGPD');
+</script>
